--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.jlobato.gpro</groupId>
   <artifactId>gpro-utils</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0.RELEASE</version>
   <packaging>jar</packaging>
 
   <name>gpro-utils</name>
