--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,9 @@
 <!-- Propiedades generales del proyecto -->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<java.build.version>1.8</java.build.version>
-	<java.source.version>1.8</java.source.version>
-	<maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+  	<maven.compiler.source>17</maven.compiler.source>
+  	<maven.compiler.target>17</maven.compiler.target>
+	<maven.compiler.release>17</maven.compiler.release>
     <junit.version>4.13.1</junit.version>
   </properties>
 
