--- a/.settings/.gitignore
+++ b/.settings/.gitignore
@@ -5,3 +5,4 @@
 /org.eclipse.wst.common.project.facet.core.xml
 /org.eclipse.wst.validation.prefs
 /org.eclipse.jdt.apt.core.prefs
+/org.sonarlint.eclipse.core.prefs
